--- a/express-skills/public/stylesheets/style.css
+++ b/express-skills/public/stylesheets/style.css
@@ -1,8 +1,62 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-family: 'Noto Serif', serif;
+  background-color: mistyrose;
 }
 
 a {
-  color: #00B7FF;
+  color: #6b6b6b;
+  font-size: 20px;
+}
+
+ul {
+  margin: 0px;
+  padding-left: 45px;
+  padding-right: 0px;
+}
+
+li {
+  list-style: none;
+  margin: 0px;
+  display: flex;
+  align-items: center;
+}
+
+input {
+  font-size: 12px;
+  padding: 4px;
+}
+
+form {
+  padding-bottom: 5px;
+  padding-right: 10px;
+  display: inline;
+}
+
+h1 {
+  margin-top: 20px;
+  margin-left: 50px;
+}
+
+h3,  h5 {
+  margin-left: 50px;
+}
+
+input {
+  margin-left: 45px;
+  border: none;
+  padding: none;
+}
+
+#add, #edit {
+  margin-top: 0px;
+  margin-left: 50px;
+}
+
+#update {
+  margin-left: 50px;
+}
+
+#new {
+  margin-left: 50px;
 }
