--- a/express-skills/views/skills/edit.ejs
+++ b/express-skills/views/skills/edit.ejs
@@ -4,17 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
   <title>Dev Skills</title>
 </head>
 <body>
   <h1>Edit Skill</h1>
+  <br>
   <form action="/skills/<%= skillIdx %>?_method=PUT" method="POST" autocomplete="off">
     <input type="text" name="skill" value="<%= skill.skill %>">
-    <label> Done  
+    <label> Done?
       <input type="checkbox" name="done" <%= skill.done ? 'checked' : '' %>>
     </label>
-    <button type="submit">Update Skill</button>
+    <br><br>
+    <button type="submit" class="btn btn-info" id="update">Update Skill</button>
   </form>
 </body>
 </html>
