--- a/express-skills/views/skills/index.ejs
+++ b/express-skills/views/skills/index.ejs
@@ -4,23 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
   <title>Dev Skills</title>
 </head>
 <body>
-  <h1>Skills as of <%= time %></h1>
+  <h1>Dev Skills</h1>
   <ul>
     <% skills.forEach(function(t, idx) { %>
-      <li>
+      <li> 
+        <br>
         <form action="/skills/<%= idx %>?_method=DELETE" method="POST" class="delete-form">
-          <button type="submit">X</button>
+        <button type="submit" class="btn btn-dark">X</button>
         </form>
-        <a href="/skills/<%= idx %>"><%= t.skill %></a>
-          - 
-        <%= t.done ? 'done' : 'not done' %>
+        <a href="/skills/<%= idx %>"><%= t.skill %></a> - <%= t.done ? 'done' : 'not done' %>
       </li>
     <% }); %>
   </ul>
-  <a href="/skills/new">Add Skill</a>
+ <br>
+  <a href="/skills/new" id="add">Add Skill</a>
 </body>
 </html>
