--- a/express-skills/views/skills/show.ejs
+++ b/express-skills/views/skills/show.ejs
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Dev Skills</title>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
+  <title>Dev Skills #<%= skillNum %></title>
 </head>
 <body>
   <h1>Skill #<%= skillNum %></h1>
   <h3><%= skill.skill %></h3>
-  <h3>Complete: <%= skill.done ? 'Yes' : 'Nope' %></h3>
-  <a href="/skills/<%= skillNum - 1 %>/edit">Edit</a>
+  <h5>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
+  <a href="/skills/<%= skillNum - 1 %>/edit" id="edit">Edit</a>
 </body>
 </html>
